@@ -1,0 +1,10 @@
+COPYRIGHT STATUS
+----------------
+
+This code is
+
+  Copyright (C)2008-2013 by Alexios Ghalanos.
+
+All code is subject to the GNU General Public License, Version 3. See
+the file COPYING for the exact conditions under which you may
+redistribute it.
