@@ -1,16 +1,19 @@
-44a4e2d714b5e5ccca53475af86a9ddf *ChangeLog
-930e713395617e4761fcf61e316e48d1 *DESCRIPTION
+1d2bc5dc7910282b961306b039ab1e60 *COPYRIGHTS
+ef58b5eb881117a6b5ed50920963a82b *ChangeLog
+2909490e6f6c52ce3c51660f4e2f50af *DESCRIPTION
 56caf229b93b5244adc2a114b673f2aa *NAMESPACE
-372b8fc6c8f26c87d83d2e4b8ba9730d *R/classes-spd.R
-e19900788783638cc81378448955bdc1 *R/methods-GPD.R
-713040e78001c77020a3c4ef88c9ac57 *R/methods-spdDistribution.R
-09f08e04a59e1f162047983be5dbd33c *R/methods-spdFit.R
-351ce7a201f73d11fb89c1ed4995a6ef *R/methods-spdPlots.R
-b8ae4a9ecf1395baa2ffaf1d1e8147da *R/misc-spd.R
-e8e4e14ee7c9d8517bf2b362421df661 *man/GPDFIT-class.Rd
-41ab9df79eca3f650b32fe2eebdff6e1 *man/GPDTAILS-class.Rd
-35560c208bd7546868fcb89ac6507622 *man/SPD-class.Rd
-f330ab82d3a65fd993b7a0ab4ce22b6b *man/plot-methods.Rd
-4454ce06d91d6391f7254d268703c54e *man/spd-methods.Rd
-9aa818d984a0c20adc729e013d18c7dd *man/spd-package.Rd
+b41753d76c064a335752ce3ae1814976 *R/classes-spd.R
+99ecd6984fb7cc3988f16258959a7f16 *R/methods-GPD.R
+e155ca662e8206f9645fddf6c9eaa6c2 *R/methods-spdDistribution.R
+cfa591e8a353f942c820b34fef23bf8a *R/methods-spdFit.R
+b980dd92fb2521c7fcb9128411d8851c *R/methods-spdPlots.R
+e523844cd0e30b2238c6441496f5e7e9 *R/misc-spd.R
+24f440bd9446e6cdf70d8bcd3c443e6a *R/zzz.R
+9093585011002b493ce7bd103c9e05c3 *inst/CITATION
+d6c7742c9e9ce62eefcfd8f9ea499a20 *man/GPDFIT-class.Rd
+a0ccd2eac9bbc559e70b1b0cd1222073 *man/GPDTAILS-class.Rd
+a7912e15a8b5f887181048b2760e0a53 *man/SPD-class.Rd
+ffb34fa0f8991f8c719cb945fb35ea21 *man/plot-methods.Rd
+9312455f288bad553edece44f184579e *man/spd-methods.Rd
+aeaa16258633dcca95fb972f9623e2d0 *man/spd-package.Rd
 d131ff54240fbe8a84e7997c0ab4c100 *man/spdfit-methods.Rd
