@@ -1,0 +1,21 @@
+#################################################################################
+##
+##   R package spd by Alexios Ghalanos Copyright (C) 2008-2013
+##   This file is part of the R package spd.
+##
+##   The R package spd is free software: you can redistribute it and/or modify
+##   it under the terms of the GNU General Public License as published by
+##   the Free Software Foundation, either version 3 of the License, or
+##   (at your option) any later version.
+##
+##   The R package spd is distributed in the hope that it will be useful,
+##   but WITHOUT ANY WARRANTY; without even the implied warranty of
+##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+##   GNU General Public License for more details.
+##
+#################################################################################
+.onLoad <- function(lib, pkg) {
+	if(interactive() || getOption("verbose"))
+		packageStartupMessage(sprintf("Package %s (%s) loaded.  To cite, see citation(\"%s\")\n", 
+		pkg, utils::packageDescription(pkg)$Version, pkg))
+}
