@@ -1,0 +1,20 @@
+citHeader("When using spd in publications, please cite:")
+
+if(!exists("meta") || is.null(meta)) meta <- packageDescription("spd")
+
+year <- sub("-.*", "", meta$Date)
+note <- sprintf("R package version %s.", meta$Version)
+
+citEntry(entry="Manual",
+         title = "spd: Semi-Parametric Distribution.",
+         author = personList(as.person("Alexios Ghalanos")),
+         year         = year,
+         note         = note,
+         textVersion = 
+         paste("Alexios Ghalanos",
+               sprintf("(%s).", year),
+               "spd: Semi-Parametric Distribution.",
+	       note),
+	 header = "To cite the spd package, please use:"
+)
+
