@@ -1,3 +1,7 @@
+2012-12-20  Alexios Ghalanos <alexios@4dscape.com>
+	* DESCRIPTION (Version): New version is 1.8.
+	* Removed rseed argument from rspd (redundant). 
+
 2012-03-15  Alexios Ghalanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.7.
 	* Fix to documentation examples to avoid errors in check 
